<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="30dp"
    tools:context=".RegisterActivity">

        <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/playlogo"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:layout_marginBottom="25dp"/>
        <TextView
            android:id="@+id/Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/registration"
            android:textSize="30sp"
            android:textColor="#FF0000"
            android:textStyle="bold"
            android:layout_marginBottom="25dp"/>

        <EditText
            android:id="@+id/inpUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:gravity="fill_horizontal"
            android:hint="@string/hint_username"
            android:inputType="text"
            android:lines="1"
            android:selectAllOnFocus="true"
            android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/inpEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:gravity="fill_horizontal"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:lines="1"
        android:selectAllOnFocus="true"
        android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/inpPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:lines="1"
            android:selectAllOnFocus="true"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/inpPasswordAgain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:hint="@string/hint_passwordagain"
            android:inputType="textPassword"
            android:lines="1"
            android:selectAllOnFocus="true"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btnRegistration"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/registration"
            android:backgroundTint="#008800"
            android:textColor="@color/white"
            android:fontFamily="sans-serif"
            android:textSize="20sp"
            android:layout_marginBottom="5dp"/>

        <Button
            android:id="@+id/btnBack"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/back"
            android:backgroundTint="#990000"
            android:textColor="@color/white"
            android:fontFamily="sans-serif"
            android:textSize="15sp" />
</LinearLayout>